Updated to Electron v2.0.0-beta

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -77,35 +77,35 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">1.1.3</p>
+                            <p class="wversion">2.0.0</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta/Firo.Client.Setup.2.0.0-beta.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>C7DD3EE192388422677C91FD228BADD316BC3905764196B58F1EC9F939316839</p>
+                                      <p>6dfa2c1004f38b7ab696066b774457186cf6ba25236e00320bd9e3b85322a722</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.dmg">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta/Firo.Client-2.0.0-beta.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>bd4ed82f0eea8d113eb2891586e70ab7c2f6046d4a6dcb0427e2f837e77892fd</p>
+                                      <p>cac92f6808328670c14f756b6afb9e067d6acab70295ae801b5c36d7f5e25849</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta/Firo.Client-2.0.0-beta.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>79db57ec023f580e5105b227c92e1c2906dc400b00d3ee7e70c854f24671f85f</p>
+                                      <p>f5fb2f6caa3f5223f5ed611c840cb1f233d5fe2f5f0e45e22abdccbba7a2e3c7</p>
                                     </div>
                               </div>
                             </div>
