update matrix link

--- a/community/index.html
+++ b/community/index.html
@@ -62,7 +62,7 @@ permalink: /community/index.html
                         <img src="/img/site-icons/com_bitcointalk.svg" alt=""/>
                         <p>Bitcointalk</p>
                   </a>
-                  <a href="https://riot.im/app/#/room/#zcoin:matrix.org" target="_blank" class="col">
+                  <a href="https://riot.im/app/#/room/#firo:matrix.org" target="_blank" class="col">
                         <img src="/img/site-icons/com_riot.svg" alt=""/>
                         <p>Matrix (Element)</p>
                   </a>
