Add Instagram link

--- a/community/index.html
+++ b/community/index.html
@@ -78,6 +78,10 @@ permalink: /community/index.html
                         <img src="/img/site-icons/com_qq.svg" alt=""/>
                         <p>QQ</p>
                   </a>
+				  <a href="https://www.instagram.com/firoorg/" target="_blank" class="col">
+                        <img src="/img/site-icons/com_instagram.svg" alt=""/>
+                        <p>Instagram</p>
+                  </a>
               </div>
             </div>
       </section>
