--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -77,35 +77,35 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">2.0.0</p>
+                            <p class="wversion">2.0.1 Beta</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta/Firo.Client.Setup.2.0.0-beta.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.1-beta/FiroClientSetup-2.0.1-835915cbd.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>6dfa2c1004f38b7ab696066b774457186cf6ba25236e00320bd9e3b85322a722</p>
+                                      <p>79bf0d24f4960f7dbd1ae470962266df9f8a39217f43310f3fdcefe085237505</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta/Firo.Client-2.0.0-beta.dmg">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.1-beta/FiroClient-2.0.1-835915cbd.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>cac92f6808328670c14f756b6afb9e067d6acab70295ae801b5c36d7f5e25849</p>
+                                      <p>f09bac6dccc5cd4b0c57564525ac13f0e3301bef22adbf86ffc0dc5c1a2c76af</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta/Firo.Client-2.0.0-beta.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.1-beta/FiroClient-2.0.1-835915cbd.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>f5fb2f6caa3f5223f5ed611c840cb1f233d5fe2f5f0e45e22abdccbba7a2e3c7</p>
+                                      <p>af9f7d5b979163c4c29f0d6a3342848d7cbb9f13f456c37dcb7b06ece0c55831</p>
                                     </div>
                               </div>
                             </div>
