Exchanges and wallet tweaks - Add instaswap - Add Guardarian - Changed to new Guarda logo

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -41,6 +41,9 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://dovewallet.com/" target="_blank"><img src="/img/fiat-exchanges/dovewallet.svg" alt=""/></a>
                   </div>
                   <div class="col">
+                      <a href="https://guardarian.com/" target="_blank"><img src="/img/fiat-exchanges/guardarian.svg" alt=""/></a>
+                  </div>
+                  <div class="col">
                       <a href="https://indodax.com/market/FIROIDR" target="_blank"><img src="/img/fiat-exchanges/indodax.svg" alt=""/></a>
                   </div>                
                   <div class="col">
@@ -177,6 +180,9 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
                   <div class="col">
                       <a href="https://changelly.com/" target="_blank"><img src="/img/coin-swapping/changelly.svg" alt=""/></a>
+                  </div>
+                  <div class="col">
+                      <a href="https://instaswap.io/" target="_blank"><img src="/img/coin-swapping/instaswap.png" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://coinswitch.co/" target="_blank"><img src="/img/coin-swapping/coinswitch.svg" alt=""/></a>
