--- a/about/team/index.html
+++ b/about/team/index.html
@@ -28,7 +28,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Poramin Insom</h4>
                               <p class="title">Co-Founder</p>
-                              <p class="bio">Poramin Insom founded Zcoin in 2016, seeking to provide financial privacy and also more inclusive mining via ASIC resistant proof of work. He earned a masters degree in Information Security from Johns Hopkins University where he wrote a paper on a proposed practical implementation of the Zerocoin protocol. He has been instrumental in laying the foundations of Zcoin's technology from implementing the world's first implementation of Zerocoin and also pushing for the research and development into the MTP mining algorithm. Poramin has been focused on pushing for the adoption of Zcoin into the real world especially in his involvement in facilitating the Thai Democrat Party to conduct its primary elections to elect its party leader on Zcoin's blockchain and also integrating Zcoin into the Thai economy via his regulated cryptocurrency exchange Satang Pro. Lately, his work has been focused on Exodus, Zcoin's tokenization layer that allows anyone to build their own private tokens on Zcoin's blockchain.</p>
+                              <p class="bio">Poramin Insom founded Zcoin (now Firo) in 2016, seeking to provide financial privacy and also more inclusive mining via ASIC resistant proof of work. He earned a masters degree in Information Security from Johns Hopkins University where he wrote a paper on a proposed practical implementation of the Zerocoin protocol. He has been instrumental in laying the foundations of Zcoin's (now Firo) technology from implementing the world's first implementation of Zerocoin and also pushing for the research and development into the MTP mining algorithm. Poramin has been focused on pushing for the adoption of Firo into the real world especially in his involvement in facilitating the Thai Democrat Party to conduct its primary elections to elect its party leader on Firo's blockchain and also integrating Firo into the Thai economy via his regulated cryptocurrency exchange Satang Pro. Lately, his work has been focused on Exodus, Firo's tokenization layer that allows anyone to build their own private tokens on Firo's blockchain.</p>
                           </div>
                       </div>
                   </div>
@@ -40,7 +40,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Reuben Yap</h4>
                               <p class="title">Co-Founder & Project Steward</p>
-                              <p class="bio">Reuben Yap is the Project Steward of Zcoin and has played a pivotal role in shaping Zcoin's strategy and vision. He joined the Zcoin team in October 2016 and currently handles the overall strategy and operational aspects of the project along with being its spokesperson. Reuben has been a vocal advocate of online and financial privacy since 2007. Prior to joining Zcoin, he was a partner at a law firm, specializing in institutional frameworks.</p>
+                              <p class="bio">Reuben Yap is the Project Steward of Firo and has played a pivotal role in shaping Firo's strategy and vision. He joined the Zcoin (now Firo) team in October 2016 and currently handles the overall strategy and operational aspects of the project along with being its spokesperson. Reuben has been a vocal advocate of online and financial privacy since 2007. Prior to joining Zcoin (now Firo), he was a partner at a law firm, specializing in institutional frameworks.</p>
                           </div>
                       </div>
                   </div>
@@ -88,7 +88,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Panu Suksumonsin</h4>
                               <p class="title">Developer</p>
-                              <p class="bio">Panu is a software engineer who graduated from the Faculty of Engineering, Chulalongkorn University, Thailand's number one ranked university. His main programming languages are C++ and Go. Panu has experience in cryptocurrency exchange development and was also responsible for coding the merkle tree library for MTP, Zcoin's Proof of Work algorithm. He has a passion for mathematics, programming and games.</p>
+                              <p class="bio">Panu is a software engineer who graduated from the Faculty of Engineering, Chulalongkorn University, Thailand's number one ranked university. His main programming languages are C++ and Go. Panu has experience in cryptocurrency exchange development and was also responsible for coding the merkle tree library for MTP, Zcoin's (now Firo) Proof of Work algorithm. He has a passion for mathematics, programming and games.</p>
                           </div>
                       </div>
                   </div>
@@ -100,7 +100,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Levon Petrosyan</h4>
                               <p class="title">Developer</p>
-                              <p class="bio">Levon is a software engineer with Master's degrees in both Computing Sciences and Economics from the American University of Armenia. His background is in C++ programming and cryptography. He has contributed significantly to Zcoin's Lelantus cryptographic library.</p>
+                              <p class="bio">Levon is a software engineer with Master's degrees in both Computing Sciences and Economics from the American University of Armenia. His background is in C++ programming and cryptography. He has contributed significantly to Firo's Lelantus cryptographic library.</p>
                           </div>
                       </div>
                   </div>
@@ -124,7 +124,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Sproxet</h4>
                               <p class="title">Developer</p>
-                              <p class="bio">Sproxet is an anonymous developer that has worked on privacy preserving software for the past 15 years and has contributed significantly to Zcoin's Electron client. Sproxet is also the founder of Signal Eleven, an IT consultancy which focuses on computer security and auditing, software development and cryptographic systems architecture design.</p>
+                              <p class="bio">Sproxet is an anonymous developer that has worked on privacy preserving software for the past 15 years and has contributed significantly to Firo's Electron client. Sproxet is also the founder of Signal Eleven, an IT consultancy which focuses on computer security and auditing, software development and cryptographic systems architecture design.</p>
                           </div>
                       </div>
                   </div>
@@ -136,7 +136,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>djm34</h4>
                               <p class="title">Miner Developer</p>
-                              <p class="bio">djm34 is one of the most recognized miner devs in the cryptocurrency scene and has developed miners for Vertcoin (lyra2re, lyra2rev2), Neoscrypt, Coinshield/Nexus and Yescrypt, just to name a few. He played a key role in developing Zcoin's Lyra2z transition algorithm and its miners and also developing Zcoin's open sourced miners for MTP.</p>
+                              <p class="bio">djm34 is one of the most recognized miner devs in the cryptocurrency scene and has developed miners for Vertcoin (lyra2re, lyra2rev2), Neoscrypt, Coinshield/Nexus and Yescrypt, just to name a few. He played a key role in developing Zcoin's (now Firo) Lyra2z transition algorithm and its miners and also developing Firo's open sourced miners for MTP.</p>
                           </div>
                       </div>
                   </div>
@@ -244,7 +244,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Benjamin Lakoff</h4>
                               <p class="title">Prague, Czech Republic Ambassador</p>
-                              <p class="bio">Ben is an entrepreneur and finance professional. He has extensive international experience in lean startups, strategic planning, and financial statement management & analysis. He is an active trader and is very passionate about cryptocurrencies, especially those like Zcoin with a focus on privacy and decentralization. He is currently the Head of Finance & Strategy of Intelligent Trading Foundation (ITF), and Director at Blockchain Hub Prague.</p>
+                              <p class="bio">Ben is an entrepreneur and finance professional. He has extensive international experience in lean startups, strategic planning, and financial statement management & analysis. He is an active trader and is very passionate about cryptocurrencies, especially those like Firo with a focus on privacy and decentralization. He is currently the Head of Finance & Strategy of Intelligent Trading Foundation (ITF), and Director at Blockchain Hub Prague.</p>
                           </div>
                       </div>
                   </div>
@@ -268,7 +268,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Sergio von Facchin</h4>
                               <p class="title">Nomad Ambassador</p>
-                              <p class="bio">Sergio is an author, entrepreneur, world traveler and loves the free life. He shows people legal ways to acquire more freedom through internationalization, tax optimization and diversification. The possibilities that cryptocurrencies like Zcoin offer, play a major part in getting more independence in our current financial system. In a world where more and more personal data is leaked, it's important to know how to protect your data. This is why Sergio supports Zcoin and wants to bring more awareness to the project and its possibilities.</p>
+                              <p class="bio">Sergio is an author, entrepreneur, world traveler and loves the free life. He shows people legal ways to acquire more freedom through internationalization, tax optimization and diversification. The possibilities that cryptocurrencies like Firo offer, play a major part in getting more independence in our current financial system. In a world where more and more personal data is leaked, it's important to know how to protect your data. This is why Sergio supports Firo and wants to bring more awareness to the project and its possibilities.</p>
                           </div>
                       </div>
                   </div>
@@ -280,7 +280,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Nzeadi Joachim Noble</h4>
                               <p class="title">Abuja, Nigeria Ambassador</p>
-                              <p class="bio">Joachim is a civil engineering graduate from Nigeria who is passionate about cryptocurrencies and dedicated to spreading awareness of Zcoin across Nigeria.</p>
+                              <p class="bio">Joachim is a civil engineering graduate from Nigeria who is passionate about cryptocurrencies and dedicated to spreading awareness of Firo across Nigeria.</p>
                           </div>
                       </div>
                   </div>
@@ -292,7 +292,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Prashanth Konda</h4>
                               <p class="title">Dubai, UAE Ambassador</p>
-                              <p class="bio">Prasanth is a Computer Science student and part-time blockchain engineer with a passion for decentralization. He got infected with the crypto virus when the Zcoin team visited Dubai and subsequently delved deep into the topic. What's more, Prasanth is involved in the startup and hackathon scene and is currently building proof of concepts for several blockchain solutions.</p>
+                              <p class="bio">Prasanth is a Computer Science student and part-time blockchain engineer with a passion for decentralization. He got infected with the crypto virus when the Firo team visited Dubai and subsequently delved deep into the topic. What's more, Prasanth is involved in the startup and hackathon scene and is currently building proof of concepts for several blockchain solutions.</p>
                           </div>
                       </div>
                   </div>
@@ -364,7 +364,7 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Lemar “Luke” Briones</h4>
                               <p class="title">Filipino Community Manager</p>
-                              <p class="bio">An Information Technology graduate from the Philippines, Lemar has been a cryptocurrency enthusiast since 2017 and is dedicated to spreading awareness of Zcoin across the Philippines.</p>
+                              <p class="bio">An Information Technology graduate from the Philippines, Lemar has been a cryptocurrency enthusiast since 2017 and is dedicated to spreading awareness of Firo across the Philippines.</p>
                           </div>
                       </div>
                   </div>
