--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -205,6 +205,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://swapzone.io/" target="_blank"><img src="/img/coin-swapping/swapzone.svg" alt=""/></a>
                   </div>
+                  <div class="col">
+                      <a href="https://exolix.com/" target="_blank"><img scr="/img/coin-swapping/exolix.png" alt=""/></a>
+                    </div>
               </div>
           </div>
       </section>
