--- a/about/research/index.html
+++ b/about/research/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: titles.tech
-permalink: /about/tech/index.html
+permalink: /about/research/index.html
 ---
       <section class="page-intro section">
           <div class="row">
