--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ permalink: /index.html
                           <h4>Dandelion</h4>
                       </div>
                   </div>
-                  <a class="btn-secondary" href="{{ site.baseurl }}/about/tech/">{% t home.cta2 %}</a>
+                  <a class="btn-secondary" href="{{ site.baseurl }}/about/research/">{% t home.cta2 %}</a>
              </div>
           </div>
           </div>
