Update roadmap with RAP

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -38,9 +38,13 @@ permalink: /about/roadmap/index.html
                               <h3>{% t roadmap.chainlocks %}</h3>
                               <p>{% t roadmap.chainlocksdesc %}</p>
                             </li>
-                            <li class="event current">
+                            <li class="event done">
                               <h3>{% t roadmap.rap %}</h3>
                               <p>{% t roadmap.rapdesc %}</p>
+                            </li>
+                            <li class="event current">
+                              <h3>{% t roadmap.progpow %}</h3>   
+                              <p>{% t roadmap.progpowdesc %}</p>
                             </li>
                             <li class="event current">
                               <h3>{% t roadmap.instant %}</h3>
@@ -61,10 +65,6 @@ permalink: /about/roadmap/index.html
                             <li class="event">
                               <h3>{% t roadmap.renfiro %}</h3>   
                               <p>{% t roadmap.renfirodesc %}</p>
-                            </li>
-                            <li class="event">
-                              <h3>{% t roadmap.progpow %}</h3>   
-                              <p>{% t roadmap.progpowdesc %}</p>
                             </li>
                           </ul>
                   </div>
