--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -346,6 +346,16 @@ permalink: /get-firo/download/index.html
                                     </a>
                                  </li>
                               </ul>
+							  <img src="/img/mobile-wallets/dove-wallet.svg" alt="" />
+                              <h4>Dove Wallet</h4>
+                              <ul class="row">
+                                 <li class="col">
+                                    <a href="https://dovewallet.com/en/wallet" target="_blank">
+                                         <i class="icon-web"></i>
+                                    </a>
+                                 </li>
+                              </ul>
+
                           </div>
               </div>
           </div>
