--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -346,6 +346,8 @@ permalink: /get-firo/download/index.html
                                     </a>
                                  </li>
                               </ul>
+                          </div>
+						  <div class="col">
 							  <img src="/img/mobile-wallets/dove-wallet.svg" alt="" />
                               <h4>Dove Wallet</h4>
                               <ul class="row">
@@ -355,7 +357,6 @@ permalink: /get-firo/download/index.html
                                     </a>
                                  </li>
                               </ul>
-
                           </div>
               </div>
           </div>
