Updated team page and added exchanges

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -37,6 +37,9 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
               </div>
               <div class="row">
+                <div class="col">
+                    <a href="https://digitalexchange.id/" target="_blank"><img src="/img/fiat-exchanges/digitalexchange.svg" alt=""/></a>
+                </div>
                   <div class="col">
                       <a href="https://dovewallet.com/" target="_blank"><img src="/img/fiat-exchanges/dovewallet.svg" alt=""/></a>
                   </div>
@@ -182,10 +185,13 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://changelly.com/" target="_blank"><img src="/img/coin-swapping/changelly.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://instaswap.io/" target="_blank"><img src="/img/coin-swapping/instaswap.png" alt=""/></a>
+                    <a href="https://coinswitch.co/" target="_blank"><img src="/img/coin-swapping/coinswitch.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://coinswitch.co/" target="_blank"><img src="/img/coin-swapping/coinswitch.svg" alt=""/></a>
+                    <a href="https://exolix.com/" target="_blank"><img src="/img/coin-swapping/exolix.svg" alt=""/></a>
+                  </div>
+                  <div class="col">
+                      <a href="https://instaswap.io/" target="_blank"><img src="/img/coin-swapping/instaswap.png" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt=""/></a>
