Added merchants page

--- a/community/social/index.html
+++ b/community/social/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: titles.community
-permalink: /community/index.html
+permalink: /community/social/index.html
 ---
       <section class="page-intro section">
           <div class="row">
@@ -82,6 +82,10 @@ permalink: /community/index.html
                         <img src="/img/site-icons/com_instagram.svg" alt=""/>
                         <p>Instagram</p>
                   </a>
+                  <div href="#" target="_blank" class="col extra">
+                  </div>
+                  <div href="#" target="_blank" class="col extra">
+                  </div>
               </div>
             </div>
       </section>
