Fixed typo leading to incorrect HTML

--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -120,7 +120,7 @@ permalink: /community/merchants/index.html
 
               <button class="accordion col" id="btn8">
                    <img src="/img/merchants/icons/legalservices.png" alt=""/>
-                   <p>{% t merchants.button8 %}/p>
+                   <p>{% t merchants.button8 %}</p>
               </button>
                
             </div>
