Add and update translations

--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -6,7 +6,7 @@ permalink: /community/merchants/index.html
       <section class="page-intro section">
           <div class="row">
               <div class="col">
-                  <h1>Merchants</h1>
+                  <h1>{% t merchants.heading %}</h1>
               </div>
           </div>
       </section>
@@ -15,7 +15,7 @@ permalink: /community/merchants/index.html
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <p class="intro-p"><span>Disclaimer:</span> We do not make any warranties or representations on the services listed here.</p>
+                      <p class="intro-p"><span>{% t merchants.disclaimer %}</span>{% t merchants.disclaimertext %}</p>
                   </div>
               </div>
           </div>
