Fix link to community socials

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -252,7 +252,7 @@ permalink: /about/faq/index.html
                             <input type="checkbox" id="q18">
                             <label class="tab-label" for="q18"><h4>How can I get involved with the Firo community?</h4></label>
                             <div class="tab-content">
-                                <p>You can check out them <a href="https://firo.org/community/">here</a>.</p>
+                                <p>You can check out them <a href="https://firo.org/community/social/">here.</a></p>
                             </div>
                           </div>
                         </div>
