Added disclaimers and a referral link

--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -15,7 +15,7 @@ permalink: /community/merchants/index.html
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <p class="intro-p"><span>Disclaimer:</span> We do not make any warranties or representations on the services listed here.</p>
+                      <p class="intro-p"><span>Disclaimer:</span> Some of these links contain referral links whereby we may receive compensation when you sign-up or use their products/services. These do not constitute an endorsement of the product/service.</p>
                   </div>
               </div>
           </div>
@@ -133,7 +133,7 @@ permalink: /community/merchants/index.html
                       <label class="acc-label" for="chck5">{% t merchants.button5 %}</label>
                       <div class="accordion-content col" id="btn5-content">
                             <div class="row">
-                               <div class="col"><a href="https://timcasino.com/" target="_blank"><img src="/img/merchants/logos/timcasino-logo.png" alt="TimCasino logo"/></a></div>         
+                               <div class="col"><a href="https://timcasino.com/?ref=546" target="_blank"><img src="/img/merchants/logos/timcasino-logo.png" alt="TimCasino logo"/></a></div>         
                             </div>
                       </div>
                   </div>
