--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -25,6 +25,7 @@ permalink: /get-firo/buy-firo/index.html
           <div class="row">
               <div class="col">
                   <p class="intro-text">{% t buyfiro.heading2 %}</p>
+                  <p class="intro-text disclaimer"><span>{% t buyfiro.predisclaimer %}:</span> {% t buyfiro.disclaimer %}</p>
               </div>
           </div>
       </section>
