--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -212,7 +212,7 @@ permalink: /community/merchants/index.html
                           <label class="acc-label" for="chck10">{% t merchants.button10 %}</label>
                           <div class="accordion-content col" id="btn10-content">
                                 <div class="row">
-                                   <div class="col"><a href="https://www.myconstant.com/online-multi-crypto-wallet " target="_blank"><img src="/img/merchants/logos/myconstant-logo.png" alt=""/></a></div>
+                                   <div class="col"><a href="https://www.myconstant.com/sign-up?r=Q6JX4Z782D" target="_blank"><img src="/img/merchants/logos/myconstant-logo.png" alt=""/></a></div>
                                    <div class="col"><a href="https://coinrabbit.io/" target="_blank"><img src="/img/merchants/logos/coinrabbit-logo.png" alt=""/></a></div>
                                 </div>
                           </div>
