--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -55,12 +55,20 @@ permalink: /about/roadmap/index.html
                               <p>{% t roadmap.elysiumdesc %}</p>
                             </li>
                             <li class="event current">
-                              <h3>{% t roadmap.lelantus2 %}</h3>
-                              <p>{% t roadmap.lelantus2desc %}</p>
+                              <h3>{% t roadmap.lelantusspark %}</h3>
+                              <p>{% t roadmap.lelantussparkdesc %}</p>
                             </li>
                             <li class="event current">
                               <h3>{% t roadmap.mobile %}</h3>
                               <p>{% t roadmap.mobiledesc %}</p>
+                            </li>
+                            <li class="event current">
+                              <h3>{% t roadmap.lelantussparkaddress %}</h3>
+                              <p>{% t roadmap.lelantussparkaddressdesc %}</p>
+                            </li>
+                            <li class="event current">
+                              <h3>{% t roadmap.atomicdex %}</h3>
+                              <p>{% t roadmap.atomicdexdesc %}</p>
                             </li>
                           </ul>
                   </div>
