--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -77,15 +77,15 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">2.0.1 Beta</p>
+                            <p class="wversion">2.1.0 Beta</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.1-beta/FiroClientSetup-2.0.1-835915cbd.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.1.0/Firo.Client.Setup.2.1.0.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>79bf0d24f4960f7dbd1ae470962266df9f8a39217f43310f3fdcefe085237505</p>
+                                      <p>929B995C2866983DC4C3F7E78514B450257B59546D4942971874C52252A917EB</p>
                                     </div>
                                 </div>
                             </div>
