--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -77,7 +77,7 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">2.1.0 Beta</p>
+                            <p class="wversion">2.1.0</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
                                 <a href="https://github.com/firoorg/firo-client/releases/download/v2.1.0/Firo.Client.Setup.2.1.0.exe">{% t download.downloadelectronw %}</a>
@@ -90,22 +90,22 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.1-beta/FiroClient-2.0.1-835915cbd.dmg">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.1.0/Firo.Client-2.1.0.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>f09bac6dccc5cd4b0c57564525ac13f0e3301bef22adbf86ffc0dc5c1a2c76af</p>
+                                      <p>dd2843010f8d9e7ae5bf0147601b17aa9a271b3018fd0e5073f5516ec0df81e7</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.1-beta/FiroClient-2.0.1-835915cbd.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.1.0/Firo.Client-2.1.0.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>af9f7d5b979163c4c29f0d6a3342848d7cbb9f13f456c37dcb7b06ece0c55831</p>
+                                      <p>632d8cb000350831763dbc143ef9d86739aacf035ce7fb5cf6298b3d1de06cc0</p>
                                     </div>
                               </div>
                             </div>
