Update Telegram link

--- a/community/social/index.html
+++ b/community/social/index.html
@@ -26,7 +26,7 @@ permalink: /community/social/index.html
                         <img src="/img/site-icons/com_youtube.svg" alt=""/>
                         <p>Youtube</p>
                   </a>
-                  <a href="https://t.me/firoproject" target="_blank" class="col">
+                  <a href="https://t.me/firoorg" target="_blank" class="col">
                         <img src="/img/site-icons/com_telegram.svg" alt=""/>
                         <p>Telegram</p>
                   </a>
