Add localparticl and wizardswap

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -180,6 +180,9 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://instaswap.io/" target="_blank"><img src="/img/coin-swapping/instaswap.png" alt=""/></a>
                   </div>
                   <div class="col">
+                    <a href="https://www.localparticl.com/" target="_blank"><img src="/img/coin-swapping/localparticl.svg" alt=""/></a>
+                  </div>                  
+                  <div class="col">
                       <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt=""/></a>
                   </div>
                   <div class="col">
@@ -198,11 +201,11 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://swapy.app/" target="_blank"><img src="/img/coin-swapping/swapy.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://swapzone.io/" target="_blank"><img src="/img/coin-swapping/swapzone.svg" alt=""/></a>
+                      <a href="https://swapzone.io/?refId=hZ9pjEPNe" target="_blank"><img src="/img/coin-swapping/swapzone.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://exolix.com/" target="_blank"><img scr="/img/coin-swapping/exolix.png" alt=""/></a>
-                    </div>
+                      <a href="https://www.wizardswap.io/" target="_blank"><img src="/img/coin-swapping/wizardswap.svg" alt=""/></a>
+                  </div>
               </div>
           </div>
       </section>
