Fix link to keys

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -23,7 +23,7 @@ permalink: /get-firo/download/index.html
                         <p>{% t download.backup %}</p>
                     </div>
                     <div class="col">
-                        <p>{% t download.verify %} <a href="http://keys.gnupg.net/pks/lookup?op=vindex&fingerprint=on&search=0x1290A1D0FA7EE109" target="_blank">{% t download.verify1 %}</a></p>
+                        <p>{% t download.verify %} <a href="https://github.com/firoorg/firo/blob/master/reuben.asc" target="_blank">{% t download.verify1 %}</a></p>
                     </div>
                     <div class="col">
                         <p>{% t download.guide %} <a href="" target="_blank">{% t download.guide1 %}</a></p>
