Further improvements to FiroPoW guide

--- a/guide/index.html
+++ b/guide/index.html
@@ -29,7 +29,6 @@ permalink: /guide/index.html
                   <div class="col">
                         <h2>Wallet</h2>
                         <ul class="guides-list">
-							<li><a href="/guide/firo-migration-guide.html">Migrating your wallet from Zcoin to Firo</a></li>
                             <li><a href="/guide/backing-up-firo-wallet-with-mnemonic-seed-phrase.html">How to backup your Firo wallet with a mnemonic seed phrase</a></li>
                             <li><a href="/guide/reindex-wallet.html">Reindexing your Firo wallet</a></li>
 							<li><a href="/guide/using-ledger-with-firo.html">How to Use Ledger With Firo</a></li>
@@ -46,7 +45,7 @@ permalink: /guide/index.html
                   <div class="col">
                         <h2>Mining</h2>
                         <ul class="guides-list">
-                            <li><a href="/guide/how-to-mine-firo.html">How to Mine Firo (FIRO) with MTP</a></li>
+                            <li><a href="/guide/how-to-mine-firo.html">How to Mine Firo (FIRO) with FiroPoW</a></li>
                         </ul>
                   </div>
               </div>
