--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -334,7 +334,7 @@ permalink: /about/faq/index.html
                                 <ul>
                                     <li><a href="https://zednode.com/znode-stats">Zednode</a></li>
                                     <li><a href="https://znodestatus.privex.io/">Privex</a></li>
-                                    <li><a href="https://masternodes.online/currencies/XZC/">Masternodes Online</a></li>
+                                    <li><a href="https://masternodes.online/currencies/FIRO/">Masternodes Online</a></li>
                                 </ul>
                             </div>
                           </div>
