--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -114,7 +114,7 @@ permalink: /about/faq/index.html
                             <input type="checkbox" id="q7">
                             <label class="tab-label" for="q7"><h4>What mining algorithm does Firo use?</h4></label>
                             <div class="tab-content">
-                                <p>Firo uses the FiroPOW algorithm targeted at GPUs that keeps mining accessible to everyone.</p>
+                                <p>Firo uses the FiroPoW algorithm targeted at GPUs that keeps mining accessible to everyone.</p>
 								<p>FFiro has always been a strong believer in the power of Proof-of-Work (PoW). PoW enables community building, fair distribution and ties the value of Firo to the physical world with energy.</p>
                             </div>
                           </div>
