--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -115,12 +115,12 @@ permalink: /about/faq/index.html
                             <label class="tab-label" for="q7"><h4>What mining algorithm does Firo use?</h4></label>
                             <div class="tab-content">
                                 <p>Firo uses the FiroPoW algorithm targeted at GPUs that keeps mining accessible to everyone.</p>
-								<p>FFiro has always been a strong believer in the power of Proof-of-Work (PoW). PoW enables community building, fair distribution and ties the value of Firo to the physical world with energy.</p>
+								<p>Firo has always been a strong believer in the power of Proof-of-Work (PoW). PoW enables community building, fair distribution and ties the value of Firo to the physical world with energy.</p>
                             </div>
                           </div>
 						  <div class="tab">
                             <input type="checkbox" id="q8">
-                            <label class="tab-label" for="q8"><h4>What is FiroPow?</h4></label>
+                            <label class="tab-label" for="q8"><h4>What is FiroPoW?</h4></label>
                             <div class="tab-content">
                                 <p>FiroPoW is Firo's new mining algorithm that will replace Firo’s current mining algorithm: MTP (Merkle Tree Proof). It is highly optimized for GPU mining and designed to be both FPGA and ASIC resistant to even the playing field and allow people to mine from their own consumer hardware. We have always been big fans of Proof of Work’s ability to tie the value of a virtual currency to the real world along with a way to distribute Firo’s supply in a fair and decentralized manner free from restrictions.</p>
                                 <p>FiroPoW follows <a href="https://github.com/ifdefelse/ProgPOW">ProgPoW’s 0.9.4</a> spec with a small change to have the algorithm randomly change with every block. The starting DAG size will be slightly over 4GB and will increase by 8MB every 1300 blocks (~4.5 days). This DAG size has been chosen to support most modern graphics cards.</p>
