Add post and guide (#93)
* Update index.html

Added new category

* Update index.html

Update masternode tracker to firo

* Update index.html

update mining faq for firopow

* Create 2021-10-25-firo-research-update-october-2021.md

add firo research update october

* Update 2021-10-25-firo-research-update-october-2021.md

* Update index.html

* Update index.html

* Update index.html

--- a/guide/index.html
+++ b/guide/index.html
@@ -19,6 +19,7 @@ permalink: /guide/index.html
                   <li><a href="#mining-guides">Mining</a></li>
                   <li><a href="#masternode-guides">Masternodes</a></li>
                   <li><a href="#privacy-tech-guides">Privacy Tech</a></li>
+				  <li><a href="#defi">DeFi</a></li>
               </ul>
           </div>
       </section>
@@ -80,3 +81,15 @@ permalink: /guide/index.html
           </div>
       </section>
 	  
+	<section class="faq-section" id="defi">
+         <div class="container">
+              <div class="row">
+                  <div class="col">
+                        <h2>DeFi</h2>
+                        <ul class="guides-list">
+                            <li><a href="/guide/liquidity-firo-pancakeswap.html">How to Provide Liquidity for Firo on Pancakeswap</a></li>
+                        </ul>
+                  </div>
+              </div>
+          </div>
+	</section>
