--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -120,37 +120,37 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option3 %}</p>
                         <div class="inner">
                             <h3>{% t download.electrum %}</h3>
-                            <p class="wversion">4.0.9.4</p>
+                            <p class="wversion">4.1.5.1</p>
                             <p class="changelog"><a href="https://github.com/firoorg/electrum-firo/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.0.9.4/Firo-Electrum-4.0.9.4-setup-win64.exe">{% t download.downloadelectrumw %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.1.5.1/Firo-Electrum-4.1.5.1-setup-win64.exe">{% t download.downloadelectrumw %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="wh5">
                                     <label class="tab-label" for="wh5">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>388d6836db48b7cd7017e17bd91a456d47c46a7f12253499a7390f13d2411a90</p>
+                                      <p>bfe4433673b90bfafa5848b3a84a4f93741bf9387ca4935d742acedf5dbb252c</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.0.9.4/Firo-Electrum-4.0.9.4-macosx.dmg">{% t download.downloadelectrumm %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/tag/4.1.5.1">{% t download.downloadelectrumm %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
                                     <label class="tab-label" for="mh3">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>8cdd5f2db94f758429962a66b9ac0603a33fa731d1842e323ef5fd571461aaed</p>
+                                      <p>nil</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.0.9.4/Firo-Electrum-4.0.9.4-x86_64.AppImage">{% t download.downloadelectruml %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.1.5.1/Firo-Electrum-4.1.5.1-x86_64.AppImage">{% t download.downloadelectruml %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh3">
                                     <label class="tab-label" for="lh3">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>e173cd3ed9b7f333e83745e97e6dcabb5f82bd271655453c81652554611b346a</p>
+                                      <p>3de10b8cb57ecbedfc35880071b99440de0a75d5189352b27409bd5bc07cf5dc</p>
                                     </div>
                               </div>
                             </div>
