--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -129,18 +129,18 @@ permalink: /get-firo/download/index.html
                                     <input type="checkbox" id="wh5">
                                     <label class="tab-label" for="wh5">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>bfe4433673b90bfafa5848b3a84a4f93741bf9387ca4935d742acedf5dbb252c</p>
+                                      <p>fe64c5bab45cccf5af3e802ee5f98b0887e9c86c27f0869579467ff4c4f5f322</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/electrum-firo/releases/tag/4.1.5.1">{% t download.downloadelectrumm %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.1.5.1/Firo-Electrum-4.1.5.1-macosx.dmg">{% t download.downloadelectrumm %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
                                     <label class="tab-label" for="mh3">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>nil</p>
+                                      <p>9f2ea17dc5331167dc2191eb23d96711a919955962d61583c53d6bc54e34edc9</p>
                                     </div>
                               </div>
                             </div>
@@ -150,7 +150,7 @@ permalink: /get-firo/download/index.html
                                     <input type="checkbox" id="lh3">
                                     <label class="tab-label" for="lh3">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>3de10b8cb57ecbedfc35880071b99440de0a75d5189352b27409bd5bc07cf5dc</p>
+                                      <p>8fe48aeb32f030118acecf1889ffd0eb3de15af892c82dcc35c8f61b866fd97b</p>
                                     </div>
                               </div>
                             </div>
