Update FiroPoW and InstantSend

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -42,11 +42,11 @@ permalink: /about/roadmap/index.html
                               <h3>{% t roadmap.rap %}</h3>
                               <p>{% t roadmap.rapdesc %}</p>
                             </li>
-                            <li class="event current">
+                            <li class="event done">
                               <h3>{% t roadmap.progpow %}</h3>   
                               <p>{% t roadmap.progpowdesc %}</p>
                             </li>
-                            <li class="event current">
+                            <li class="event done">
                               <h3>{% t roadmap.instant %}</h3>
                               <p>{% t roadmap.instantdesc %}</p>
                             </li>
