Change PoW on main page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ permalink: /index.html
                           <img src="/img/site-icons/icon_axe.svg" alt="" />
                           <div>
                                <h4>{% t home.blockchain3 %}</h4>
-                               <p>MTP</p>
+                               <p>FiroPoW</p>
                            </div>
                       </div>
                       <div class="col">
